updated module 2 file name

--- a/curricula.html
+++ b/curricula.html
@@ -486,19 +486,19 @@ permalink: /courses/curricula/
                                     <td>G03</td>
                                     <td>All pathogens</td>
                                     <td>Wet laboratory personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
                                   </tr>
                                   <tr>
                                     <td>G03</td>
                                     <td>All pathogens</td>
                                     <td>Dry laboratory personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
                                   </tr>
                                   <tr>
                                     <td>G03</td>
                                     <td>All pathogens</td>
                                     <td>Managerial personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
                                   </tr>
                                   <tr>
                                     <td>G04</td>
