--- a/curricula.html
+++ b/curricula.html
@@ -613,7 +613,7 @@ permalink: /courses/curricula/
                                     <td>G09</td>
                                     <td>All pathogens</td>
                                     <td>Managerial personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module_G09_Introduction_to_Antimicrobial_Resistance_AMR" target="_blank">Introduction to Antimicrobial Resistance (AMR).</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G09_Introduction_to_Antimicrobial_Resistance_AMR.pdf" target="_blank">Introduction to Antimicrobial Resistance (AMR).</a></td>
                                   </tr>
                             </tbody>
                         </table>
