added wet lab pdfs

--- a/curricula.html
+++ b/curricula.html
@@ -474,7 +474,7 @@ permalink: /courses/curricula/
                                     <td>G02</td>
                                     <td>All pathogens</td>
                                     <td>Dry laboratory personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module_G02_Introduction_to_Traditional_Field_and_Genomic_Epidemiology.pdf" target="_blank">Introduction to Traditional, Field, and Genomic Epidemiology</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G02_Introduction_to_Traditional_Field_and_Genomic_Epidemiology.pdf" target="_blank">Introduction to Traditional, Field, and Genomic Epidemiology </a></td>
                                   </tr>
                                   <tr>
                                     <td>G02</td>
@@ -486,19 +486,19 @@ permalink: /courses/curricula/
                                     <td>G03</td>
                                     <td>All pathogens</td>
                                     <td>Wet laboratory personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
                                   </tr>
                                   <tr>
                                     <td>G03</td>
                                     <td>All pathogens</td>
                                     <td>Dry laboratory personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
                                   </tr>
                                   <tr>
                                     <td>G03</td>
                                     <td>All pathogens</td>
                                     <td>Managerial personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G03_An_Overview_of_the_Role_of_Genomic_Epidemiology_in_Pathogen_Genomic_Surveillance.pdf" target="_blank">An Overview of the Role of Genomic Epidemiology in Pathogen Genomic Surveillance</a></td>
                                   </tr>
                                   <tr>
                                     <td>G04</td>
@@ -613,7 +613,7 @@ permalink: /courses/curricula/
                                     <td>G09</td>
                                     <td>All pathogens</td>
                                     <td>Managerial personnel</td>
-                                    <td><a href="{{ site.url }}uploads/Module_G09_Introduction_to_Antimicrobial_Resistance_AMR" target="_blank">Introduction to Antimicrobial Resistance (AMR).</a></td>
+                                    <td><a href="{{ site.url }}uploads/Module_G09_Introduction_to_Antimicrobial_Resistance_AMR.pdf" target="_blank">Introduction to Antimicrobial Resistance (AMR).</a></td>
                                   </tr>
                             </tbody>
                         </table>
@@ -719,26 +719,26 @@ permalink: /courses/curricula/
                                 <td>W01</td>
                                 <td>All pathogens</td>
                                 <td>Wet laboratory personnel</td>
-                                <td>Introduction to Biosafety and Biosecurity</td>
+                                <td><a href="{{ site.url }}uploads/Module_W01_An_Introduction_to_Biosafety_and_Biosecurity.pdf" target="_blank">Introduction to Biosafety and Biosecurity</a></td>
                           
                               </tr>
                               <tr>
                                 <td>W02</td>
                                 <td>All pathogens</td>
                                 <td>Wet laboratory personnel</td>
-                                <td>Basic Laboratory Requirements and Operational Setup for NGS Implementation</td>
+                                <td><a href="{{ site.url }}uploads/Module_W02_ Basic_Laboratory_Requirements_and_Operational_Setup_for_NGS_Implementation.pdf" target="_blank">Basic Laboratory Requirements Set-Up</a></td>
                               </tr>
                               <tr>
                                 <td>W03</td>
                                 <td>All pathogens</td>
                                 <td>Wet laboratory personnel</td>
-                                <td>Introduction to Fundamental Laboratory Skills and Calculations</td>
+                                <td><a href="{{ site.url }}uploads/Module_W03_Introduction_to_Fundamental_Laboratory_Skills_and_Calculations.pdf" target="_blank">Introduction to Fundamental Laboratory Skills and Calculations</a></td>
                               </tr>
                               <tr>
                                 <td>W04</td>
                                 <td>All pathogens</td>
                                 <td>Wet laboratory personnel</td>
-                                <td>Basic Molecular Techniques for NGS Implementation</td>
+                                <td><a href="{{ site.url }}uploads/Module_W04_Basic_Molecular_Techniques_for_NGS_Implementation.pdf" target="_blank">Basic Molecular Techniques for NGS Implementation</a></td>
                               </tr>
                         </tbody>
                     </table>
