added wet lab pdfs

--- a/curricula.html
+++ b/curricula.html
@@ -719,26 +719,26 @@ permalink: /courses/curricula/
                                 <td>W01</td>
                                 <td>All pathogens</td>
                                 <td>Wet laboratory personnel</td>
-                                <td>Introduction to Biosafety and Biosecurity</td>
+                                <td><a href="{{ site.url }}uploads/Module_W01_An_Introduction_to_Biosafety_and_Biosecurity.pdf" target="_blank">Introduction to Biosafety and Biosecurity</a></td>
                           
                               </tr>
                               <tr>
                                 <td>W02</td>
                                 <td>All pathogens</td>
                                 <td>Wet laboratory personnel</td>
-                                <td>Basic Laboratory Requirements and Operational Setup for NGS Implementation</td>
+                                <td><a href="{{ site.url }}uploads/Module_W02_ Basic_Laboratory_Requirements_and_Operational_Setup_for_NGS_Implementation.pdf" target="_blank">Basic Laboratory Requirements Set-Up</a></td>
                               </tr>
                               <tr>
                                 <td>W03</td>
                                 <td>All pathogens</td>
                                 <td>Wet laboratory personnel</td>
-                                <td>Introduction to Fundamental Laboratory Skills and Calculations</td>
+                                <td><a href="{{ site.url }}uploads/Module_W03_Introduction_to_Fundamental_Laboratory_Skills_and_Calculations.pdf" target="_blank">Introduction to Fundamental Laboratory Skills and Calculations</a></td>
                               </tr>
                               <tr>
                                 <td>W04</td>
                                 <td>All pathogens</td>
                                 <td>Wet laboratory personnel</td>
-                                <td>Basic Molecular Techniques for NGS Implementation</td>
+                                <td><a href="{{ site.url }}uploads/Module_W04_Basic_Molecular_Techniques_for_NGS_Implementation.pdf" target="_blank">Basic Molecular Techniques for NGS Implementation</a></td>
                               </tr>
                         </tbody>
                     </table>
