added wet G01  pdf

--- a/curricula.html
+++ b/curricula.html
@@ -450,19 +450,19 @@ permalink: /courses/curricula/
                                     <td>G01</td>
                                     <td>All pathogens</td>
                                     <td>Wet laboratory personnel</td>
-                                    <td id="title_column" >An Introduction to Basic Molecular and Microbial Biology</td>
+                                    <td id="title_column" ><a href="{{ site.url }}uploads/Module_G01_An_Introduction_to_Basic_Molecular_and_Microbial_Biology.pdf" target="_blank">An Introduction to Basic Molecular and Microbial Biology</a></td>
                                   </tr>
                                   <tr>
                                     <td>G01</td>
                                     <td>All pathogens</td>
                                     <td>Dry laboratory personnel</td>
-                                    <td id="title_column" >An Introduction to Basic Molecular and Microbial Biology</td>
+                                    <td id="title_column" ><a href="{{ site.url }}uploads/Module_G01_An_Introduction_to_Basic_Molecular_and_Microbial_Biology.pdf" target="_blank">An Introduction to Basic Molecular and Microbial Biology</a></td>
                                   </tr>
                                   <tr>
                                     <td>G01</td>
                                     <td>All pathogens</td>
                                     <td>Managerial personnel</td>
-                                    <td id="title_column" >An Introduction to Basic Molecular and Microbial Biology</td>
+                                    <td id="title_column" ><a href="{{ site.url }}uploads/Module_G01_An_Introduction_to_Basic_Molecular_and_Microbial_Biology.pdf" target="_blank">An Introduction to Basic Molecular and Microbial Biology</a></td>
                                   </tr>
                                   <tr>
                                     <td>G02</td>
