updated header text

--- a/curricula.html
+++ b/curricula.html
@@ -423,7 +423,7 @@ permalink: /courses/curricula/
                 <!-- Overview Section -->
                 <div class="feature-description">
                     <h3>Basic Building Blocks</h3>
-                    <p>Basic Building Blocks Basic Building Blocks Basic Building Blocks.</p>
+                    <p>Basic Building Blocks</p>
                 </div>
 
                 <!-- Tabs -->
