udpated  course headings

--- a/curricula.html
+++ b/curricula.html
@@ -422,8 +422,8 @@ permalink: /courses/curricula/
             <div class="accordion-content active"> <!-- Default open state -->
                 <!-- Overview Section -->
                 <div class="feature-description">
-                    <h3>Basic Building Blocks</h3>
-                    <p>Basic Building Blocks</p>
+                    <h3>Basic Foundational Courses</h3>
+                    <p>Basic Foundational Courses</p>
                 </div>
 
                 <!-- Tabs -->
@@ -755,8 +755,8 @@ permalink: /courses/curricula/
             <div class="accordion-content">
                 <!-- Overview Section -->
                 <div class="feature-description">
-                    <h3>Pathogen-Specific Components</h3>
-                    <p>Components unique to pathogens like bacteria, viruses, and fungi.</p>
+                    <h3>Pathogen-Specific Courses</h3>
+                    <p>Pathogen-Specific Courses like bacteria, viruses, and fungi.</p>
                 </div>
 
                 <!-- Tabs -->
