updated global health links

--- a/trainer_community.html
+++ b/trainer_community.html
@@ -41,7 +41,7 @@ permalink: /trainer-communities/
                   <img alt="..." class="img-fluid" src="/ngs-academy/img/globalhealth.png" />
                   <div class="card-footer bg-transparent border-success">
                     How do I join? <b>Membership:</b><br>
-                    <a href="https://pha4ge.org/membership/" target="_blank">https://pha4ge.org/membership</a>
+                    <a href="https://globalhealthtrainingcentre.tghn.org/elearning/" target="_blank">https://globalhealthtrainingcentre.tghn.org/elearning/</a>
                   </div>
                 </div>
               </div>
