add contact form

--- a/test-form.html
+++ b/test-form.html
@@ -4,7 +4,7 @@ title: Pathogen Surveillance Training Curricula
 permalink: /courses/test-form/
 ---
 
-
+ this is a test form
 <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
   <input type="hidden" name="form-name" value="contact" />
   <input type="hidden" name="bot-field" />
