--- a/curricula.html
+++ b/curricula.html
@@ -636,7 +636,7 @@ permalink: /courses/curricula/
                                 <td>B01</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td> </td><a href="{{ site.url }}uploads/Module-B01-Introduction-to-Unix_Linux_Command-Line-and-Shell-Scripting.pdf" target="_blank">Introduction to Unix/Linux, Command Line, and Shell Scripting.</a></td>
+                                <td><a href="{{ site.url }}uploads/Module-B01-Introduction-to-Unix_Linux_Command-Line-and-Shell-Scripting.pdf" target="_blank">Introduction to Unix/Linux, Command Line, and Shell Scripting.</a></td>
                               </tr>
                               <tr>
                                 <td>B02</td>
