updated curricula page

--- a/curricula.html
+++ b/curricula.html
@@ -422,8 +422,8 @@ permalink: /courses/curricula/
             <div class="accordion-content active"> <!-- Default open state -->
                 <!-- Overview Section -->
                 <div class="feature-description">
-                    <h3>Basic Building Blocks</h3>
-                    <p>Basic Building Blocks</p>
+                    <h3>Basic Foundational Courses</h3>
+                    <p>Basic Foundational Courses</p>
                 </div>
 
                 <!-- Tabs -->
@@ -636,67 +636,67 @@ permalink: /courses/curricula/
                                 <td>B01</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td id="title_column" >Introduction to Unix/Linux, Command Line, and Shell Scripting</td>
+                                <td><a href="{{ site.url }}uploads/Module-B01-Introduction-to-Unix_Linux_Command-Line-and-Shell-Scripting.pdf" target="_blank">Introduction to Unix/Linux, Command Line, and Shell Scripting.</a></td>
                               </tr>
                               <tr>
                                 <td>B02</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Introduction to Version Control</td>
+                                <td><a href="{{ site.url }}uploads/Module-B02-Introduction-to-Version-Control.pdf" target="_blank">Introduction to Version Control.</a></td>
                               </tr>
                               <tr>
                                 <td>B03</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Informatics skills </td>
+                                <td><a href="{{ site.url }}uploads/Module-B03-Informatics-Skills.pdf" target="_blank">Informatics skills</a> </td>
                               </tr>
                               <tr>
                                 <td>B04</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Introduction to Programming</td>
+                                <td> <a href="{{ site.url }}uploads/Module-B04-Introduction-to-Programming.pdf" target="_blank">Introduction to Programming</a></td>
                               </tr>
                               <tr>
                                 <td>B05</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Introduction to R Programming for Data Analysis</td>
+                                <td><a href="{{ site.url }}uploads/Module-B05-Introduction-to-R-Programming-for-Data-Analysis.pdf" target="_blank">Introduction to R Programming for Data Analysis</a></td>
                               </tr>
                               <tr>
                                 <td>B06</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td id="title_column">Data Management and Basic Analytics</td>
+                                <td><a href="{{ site.url }}uploads/Module-B06-Data-Management-and-Basic-Analytics.pdf" target="_blank">Data Management and Basic Analytics</a></td>
                               </tr>
                               <tr>
                                 <td>B07</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Phylogenetics</td>
+                                <td> <a href="{{ site.url }}uploads/Module-B07-Phylogenetics.pdf" target="_blank">Phylogenetics</a> </td>
                               </tr>
                               <tr>
                                 <td>B08</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Virtual Environments and Containerization</td>
+                                <td><a href="{{ site.url }}uploads/Module-B08-Virtual-Environments-and-Containerization.pdf" target="_blank">Virtual Environments and Containerization</a></td>
                               </tr>
                               <tr>
                                 <td>B09</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Workflow management systems</td>
+                                <td> <a href="{{ site.url }}uploads/Module-B09-Workflow-Management-Systems.pdf" target="_blank">Workflow management systems</a></td>
                               </tr>
                               <tr>
                                 <td>B10</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Ontologies, standards, data curation and submission</td>
+                                <td> <a href="{{ site.url }}uploads/Module-B10-Ontologies-Standards-Data-Curation-and-Submission.pdf" target="_blank">Ontologies, standards, data curation and submission</a></td>
                               </tr>
                               <tr>
                                 <td>B11</td>
                                 <td>All pathogens</td>
                                 <td>Dry laboratory personnel</td>
-                                <td>Data Visualisation and Report Generation</td>
+                                <td> <a href="{{ site.url }}uploads/Module-B11-Data-Visualization-and-Report-Generation.pdf" target="_blank">Data Visualisation and Report Generation</a></td>
                               </tr>
                         </tbody>
                     </table>
@@ -755,8 +755,8 @@ permalink: /courses/curricula/
             <div class="accordion-content">
                 <!-- Overview Section -->
                 <div class="feature-description">
-                    <h3>Pathogen-Specific Components</h3>
-                    <p>Components unique to pathogens like bacteria, viruses, and fungi.</p>
+                    <h3>Pathogen-Specific Courses</h3>
+                    <p>Pathogen-Specific Courses like bacteria, viruses, and fungi.</p>
                 </div>
 
                 <!-- Tabs -->
