updated feedback form

--- a/curricula-feedback-form.html
+++ b/curricula-feedback-form.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Pathogen Surveillance Training Curricula Contribution
+title: Pathogen Surveillance Training Courses Contribution
 permalink: /courses/curricula-contribution/
 ---
 
@@ -26,9 +26,9 @@ permalink: /courses/curricula-contribution/
   
       <!-- Curricula Selection -->
       <div class="mb-3">
-        <label for="curricula" class="form-label">Curriculum </label>
+        <label for="curricula" class="form-label">Courses </label>
         <select class="form-control" id="curricula" name="curricula" required>
-          <option value="" disabled selected>Select Curricula</option>
+          <option value="" disabled selected>Select a Course</option>
           <option value="Generic Foundational">Generic Foundational Course</option>
           <option value="Wetlab Course">Wet-lab Foundational Course</option>
           <option value="Bioinformatics Foundational Course">Bioinformatics Foundational Course</option>
@@ -50,7 +50,7 @@ permalink: /courses/curricula-contribution/
       </div>
   
       <div class="mb-3">
-        <label for="message" class="form-label">Review</label>
+        <label for="message" class="form-label">Add message</label>
         <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your message here..." required></textarea>
       </div>
       
