--- a/curricula-feedback-form.html
+++ b/curricula-feedback-form.html
@@ -50,7 +50,7 @@ permalink: /courses/curricula-contribution/
       </div>
   
       <div class="mb-3">
-        <label for="message" class="form-label">Add contribution</label>
+        <label for="message" class="form-label">Add message</label>
         <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your message here..." required></textarea>
       </div>
       
